--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -41,11 +41,13 @@
     "@dbpiper/timer": "1.0.0-beta.2",
     "@feathersjs/hooks": "^0.6.5",
     "@microsoft/teamsfx-api": "^0.3.0-alpha.3",
+    "@types/cryptr": "^4.0.1",
     "@types/jwt-decode": "3.1.0",
     "@types/proper-lockfile": "^4.1.1",
     "adm-zip": "^0.5.5",
     "ajv": "^7.1.1",
     "axios": "^0.21.1",
+    "cryptr": "^6.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs-extra": "^9.1.0",
