--- a/packages/fx-core/templates/plugins/resource/cicd/github-workflows/ci.yml
+++ b/packages/fx-core/templates/plugins/resource/cicd/github-workflows/ci.yml
@@ -1,4 +1,4 @@
-name: 'Continuous Integration'
+name: "Continuous Integration"
 on:
   # When pull requests targeting the dev branch created.
   pull_request:
@@ -13,10 +13,10 @@ jobs:
       # Build the project.
       - uses: OfficeDev/teams-app-cicd@v1
         with:
-          operation-type: 'Build Teams App'
+          operation-type: "Build Teams App"
       # Run unit test.
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: "14"
       - name: Run Unit Test
         run: npm run test
