--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,7 +19,7 @@
     "prepack": "npm run package",
     "test:e2e": "npm run test:e2e:clean && npm run test:e2e:parallel",
     "test:e2e:clean": "ts-node tests/e2e/clean.ts",
-    "test:e2e:parallel": "mocha --no-timeouts --parallel --require ts-node/register \"tests/e2e/**/*.tests.ts\"",
+    "test:e2e:parallel": "mocha --no-timeouts --parallel --require ts-node/register \"tests/e2e/collaboration/*.tests.ts\"",
     "test:e2e:smoke": "mocha --no-timeouts --require ts-node/register \"tests/e2e/smoke/*.tests.ts\"",
     "test:e2e:others": "mocha --no-timeouts --require ts-node/register \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
     "test:unit": "nyc mocha --require ts-node/register \"tests/unit/**/*.tests.ts\"",
